# codegen

./: CMakeLists.txt  DEPENDENCIES  Makefile  README.markdown  package-lock.json  package.json  vendorpull.mask
.github/workflows/: ci.yml
contrib/: CMakeLists.txt  typescript.cc
src/generator/: CMakeLists.txt  common.cc  typescript.cc
src/generator/include/sourcemeta/codegen/: generator.h  generator_typescript.h
src/ir/: CMakeLists.txt  ir.cc  ir_default_compiler.h  ir_default_generator.h  ir_group.cc  ir_handlers.h  ir_symbol.cc
src/ir/include/sourcemeta/codegen/: ir.h  ir_error.h  ir_group.h
test/e2e/typescript/: CMakeLists.txt  e2e.cc
test/e2e/typescript/2020-12/additional_properties_false/: expected.d.ts
test/e2e/typescript/2020-12/additional_properties_true/: expected.d.ts
test/e2e/typescript/2020-12/all_type_values/: expected.d.ts  test.ts
test/e2e/typescript/2020-12/anchor_refs/: expected.d.ts  test.ts
test/e2e/typescript/2020-12/complex_nested_object/: expected.d.ts  test.ts
test/e2e/typescript/2020-12/const_keyword/: expected.d.ts  test.ts
test/e2e/typescript/2020-12/deeply_nested_refs/: expected.d.ts  test.ts
test/e2e/typescript/2020-12/defs_and_refs/: expected.d.ts  test.ts
test/e2e/typescript/2020-12/dynamic_ref_generic_list/: expected.d.ts  test.ts
test/e2e/typescript/2020-12/dynamic_ref_multiple_anchors/: expected.d.ts  test.ts
test/e2e/typescript/2020-12/embedded_resources/: expected.d.ts  test.ts
test/e2e/typescript/2020-12/enum_complex_types/: expected.d.ts  test.ts
test/e2e/typescript/2020-12/implicit_types_and_reused_refs/: expected.d.ts  test.ts
test/e2e/typescript/2020-12/object_with_additional_properties/: expected.d.ts  test.ts
test/e2e/typescript/2020-12/object_with_optional_string_property/: expected.d.ts
test/e2e/typescript/2020-12/pattern_properties_additional_false/: test.ts
test/e2e/typescript/2020-12/tuples_and_arrays/: expected.d.ts  test.ts
test/e2e/typescript/2020-12/vocabulary_ignored/: expected.d.ts
test/generator/: CMakeLists.txt  e2e.cc  generator_test.cc  generator_to_pascal_case_test.cc  generator_typescript_test.cc
test/generator/e2e/2020-12/object_with_optional_string_property/: expected.d.ts  options.json
test/ir/: CMakeLists.txt  ir_2020_12_test.cc  ir_group_test.cc  ir_symbol_test.cc  ir_test.cc  ir_test_utils.h
test/packaging/find_package/: CMakeLists.txt  hello.cc
test/typescript/: e2e.cc
