cmake_minimum_required(VERSION 3.18)
project(codegen_hello VERSION 0.0.1 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(Codegen REQUIRED)
add_executable(codegen_hello hello.cc)
target_link_libraries(codegen_hello PRIVATE sourcemeta::codegen::ir)
target_link_libraries(codegen_hello PRIVATE sourcemeta::codegen::generator)
